--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -31,4 +31,9 @@ a:link:hover, a:visited:hover  {
     border: none;
     margin-top: 20px;
 }
+.panelGridNoBorderDefaul,.panelGridNoBorder td, .panelGridNoBorder tr
+{
+    border-color: #D20005;
+    border: none;
+}
 
