--- a/src/main/webapp/templates/temaplteHeader.xhtml
+++ b/src/main/webapp/templates/temaplteHeader.xhtml
@@ -13,10 +13,10 @@
             
     </h:head>
     <h:body>
-        <p:panelGrid  columns="3" layout="grid"  >
-            <h:graphicImage name="images/siap.png" width="155" height="70" style="border: none"/>
-            <h:graphicImage name="images/ermex.png" width="300" height="70" style="border-image: none"/>
-            <h:graphicImage name="images/sagarpa.png" width="260" height="70" style="border-image: none"/>
-      </p:panelGrid>               
+        <p:panelGrid  columns="3" layout="grid">
+            <h:graphicImage name="images/siap.png" width="155" height="70" style="border: none;float:left"/>
+            <h:graphicImage name="images/ermex.png" width="300" height="70" style="border-image: none;float: none"/>
+            <h:graphicImage name="images/sagarpa.png" width="260" height="70" style="border-image: none;float: right"/>
+        </p:panelGrid>               
     </h:body>
 </html>
