--- a/src/main/webapp/templates/templateBase.xhtml
+++ b/src/main/webapp/templates/templateBase.xhtml
@@ -26,8 +26,8 @@
             <p:layoutUnit position="south" size="70" >
                 
                 <h5 align="center">
-                    Estación de Recepción México Nueva Generación, ERMEX , MÉXICO - © - 2016 <br/>
-                    22a. Zona militar carretera Toluca-Tenango km. 19.5 Paraje Rancho Sanabria , Santa María Rayón , Estado de México
+                    #{bundle.PieErmex}<br/>
+                    #{bundle.PieDir}
                 </h5>
                  
             </p:layoutUnit>
