--- a/src/main/webapp/templates/templateMenuP.xhtml
+++ b/src/main/webapp/templates/templateMenuP.xhtml
@@ -2,11 +2,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">  
+      xmlns:h="http://xmlns.jcp.org/jsf/html">  
     <h:body>
         <h:form >
-          <p:growl autoUpdate="true"/>
             <p:panelMenu>
                     <p:submenu label="Dependencias" icon="ui-icon-check">
                          <p:menuitem value="Ver Dependecnias" outcome="/vistas/dependencias/List.xhtml" />     
