--- a/src/main/webapp/templates/templateHeader.xhtml
+++ b/src/main/webapp/templates/templateHeader.xhtml
@@ -4,9 +4,9 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
     <h:body>
-        <p:panelGrid  columns="3" layout="grid">
+        <p:panelGrid  columns="3" layout="grid" styleClass="ui-panelgrid-blank">
             <h:graphicImage name="images/siap.png" width="155" height="70" style="border: none;float:left"/>
-            <h:graphicImage name="images/ermex.png" width="300" height="70" style="border-image: none;float: none"/>
+            <h:graphicImage name="images/ermex.png" width="300" height="70" style="border-image: none;text-align: center"/>
             <h:graphicImage name="images/sagarpa.png" width="260" height="70" style="border-image: none;float: right"/>
         </p:panelGrid>               
     </h:body>
