--- a/src/main/webapp/templates/templateMenuP.xhtml
+++ b/src/main/webapp/templates/templateMenuP.xhtml
@@ -7,7 +7,7 @@
         <h:form >
             <p:panelMenu>
                     <p:submenu label="Dependencias" icon="ui-icon-check">
-                         <p:menuitem value="Ver Dependecnias" outcome="/vistas/dependencias/List.xhtml" />     
+                         <p:menuitem value="Ver Dependencias" outcome="/vistas/dependencias/List.xhtml" />     
                    </p:submenu>
                     <p:submenu label="Organismos" icon="ui-icon-check">
                           <p:menuitem value="Ver Organismos" outcome="/vistas/organismos/List.xhtml" />
@@ -20,6 +20,10 @@
                    </p:submenu>
                     <p:submenu label="Gestores" icon="ui-icon-check">
                         <p:menuitem value="Ver a Gestores" outcome="/vistas/gestores/List.xhtml" />
+                   </p:submenu>
+                    <p:submenu label="Ratificaciones" icon="ui-icon-check">
+                        <p:menuitem value="Ver Ratificacion" outcome="/vistas/ratificaciones/List.xhtml" />
+                        <p:menuitem value="Ver Proceso" outcome="/vistas/procesoratificacion/List.xhtml" />
                    </p:submenu>
                     <p:submenu label="Solicitudes" icon="ui-icon-check">
                         <p:menuitem value="Ver Solicitudes" outcome="/vistas/solicitudesInternet/List.xhtml" />
