solicitudes update solo activos

--- a/src/main/webapp/templates/templateMenuP.xhtml
+++ b/src/main/webapp/templates/templateMenuP.xhtml
@@ -35,7 +35,10 @@
                     <p:submenu label="Notas" icon="ui-icon-check">
                         <p:menuitem value="Notas" outcome="/vistas/notas/List.xhtml" />
                         <p:menuitem value="Documentos notas" outcome="/vistas/documentosnotas/List.xhtml" />
-                   </p:submenu>                    
+                   </p:submenu>
+                     <p:submenu label="Reportes" icon="ui-icon-check">
+                        <p:menuitem value="Imagenes Entregadas" outcome="/vistas/Reportes/list.xhtml" />
+                   </p:submenu> 
                 </p:panelMenu>
         </h:form>
     </h:body>
