cambio persona e historial

--- a/src/main/webapp/templates/templateMenuP.xhtml
+++ b/src/main/webapp/templates/templateMenuP.xhtml
@@ -17,9 +17,11 @@
                    </p:submenu>
                     <p:submenu label="Personas" icon="ui-icon-check">
                           <p:menuitem value="Ver Personas" outcome="/vistas/personas/List.xhtml" />
+                          <p:menuitem value="Cambios" outcome="/vistas/cambiopersona/List.xhtml" />
                    </p:submenu>
                     <p:submenu label="Gestores" icon="ui-icon-check">
                         <p:menuitem value="Ver a Gestores" outcome="/vistas/gestores/List.xhtml" />
+                        <p:menuitem value="Historial Designador" outcome="/vistas/histdesignagestor/List.xhtml" />
                    </p:submenu>
                     <p:submenu label="Ratificaciones" icon="ui-icon-check">
                         <p:menuitem value="Ver Ratificacion" outcome="/vistas/ratificaciones/List.xhtml" />
