--- a/src/main/webapp/templates/templateFooter.xhtml
+++ b/src/main/webapp/templates/templateFooter.xhtml
@@ -3,9 +3,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:body>
-        <h5 align="center">
-            #{bundle.PieErmex}<br/>
-            #{bundle.PieDir}
-        </h5>
+        <center>
+            <h5>
+                #{bundle.PieErmex}<br/>
+                #{bundle.PieDir}
+            </h5>
+        </center>
     </h:body>
 </html>
