reporte imagenes entregadas

--- a/src/main/webapp/templates/templateMenuP.xhtml
+++ b/src/main/webapp/templates/templateMenuP.xhtml
@@ -43,6 +43,7 @@
                    </p:submenu>
                      <p:submenu label="Reportes" icon="ui-icon-check">
                         <p:menuitem value="Imagenes Entregadas" outcome="/vistas/Reportes/list.xhtml" />
+                        <p:menuitem value="Imagenes EntregadasP" outcome="/vistas/Reportes/list_1.xhtml"/>
                    </p:submenu> 
                 </p:panelMenu>
         </h:form>
