--- a/src/main/webapp/templates/templateMenuP.xhtml
+++ b/src/main/webapp/templates/templateMenuP.xhtml
@@ -42,8 +42,9 @@
                         <p:menuitem value="Documentos notas" outcome="/vistas/documentosnotas/List.xhtml" />
                    </p:submenu>
                      <p:submenu label="Reportes" icon="ui-icon-check">
-                        <p:menuitem value="Imagenes Entregadas" outcome="/vistas/Reportes/list.xhtml" />
-                        <p:menuitem value="Imagenes EntregadasP" outcome="/vistas/Reportes/list_1.xhtml"/>
+                        <p:menuitem value="Imagenes Recibidas" outcome="/vistas/Reportes/list_recibidas.xhtml" />
+                        <p:menuitem value="Imagenes Procesadas" outcome="/vistas/Reportes/list_procesadas.xhtml" />                       
+                        <p:menuitem value="Imagenes Entregadas" outcome="/vistas/Reportes/list_entregadas.xhtml"/>
                    </p:submenu> 
                 </p:panelMenu>
         </h:form>
