--- a/src/main/webapp/resources/css/jsfcrud.css
+++ b/src/main/webapp/resources/css/jsfcrud.css
@@ -56,8 +56,8 @@ a:link:hover, a:visited:hover  {
     border: none;
 }
 .iconosDescarga{
-    height: 5%; 
-    width:  4%;
+    height: 60px; 
+    width:  50px;
 }
 .imagenMini{
     height: 70px; 
