--- a/src/main/webapp/templates/templateMenuP.xhtml
+++ b/src/main/webapp/templates/templateMenuP.xhtml
@@ -46,6 +46,9 @@
                         <p:menuitem value="Imagenes Procesadas" outcome="/vistas/Reportes/list_procesadas.xhtml" />                       
                         <p:menuitem value="Imagenes Entregadas" outcome="/vistas/Reportes/list_entregadas.xhtml"/>
                    </p:submenu> 
+                    <p:submenu label="Manual" icon="ui-icon-check">
+                        <p:menuitem value="Ver Manual de Usuario" outcome="/vistas/Reportes/Manual.xhtml" target="_blank" />     
+                    </p:submenu>
                 </p:panelMenu>
         </h:form>
     </h:body>
