modificacion en logos  e iconos

--- a/src/main/webapp/templates/templateHeader.xhtml
+++ b/src/main/webapp/templates/templateHeader.xhtml
@@ -4,9 +4,8 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:body>
        <center>
-            <h:graphicImage name="images/siap.png" width="155" height="70" style="border: none;float:left"/>
-            <h:graphicImage name="images/ermex.png" width="300" height="70" style="border-image: none"/>
-            <h:graphicImage name="images/sagarpa.png" width="260" height="70" style="border-image: none;float: right"/>
+            <h:graphicImage name="images/ermex.png" width="400" height="90" style="border: none;float:left"/>
+            <h:graphicImage name="images/sagarpa-siap.png" width="600" height="90" style="border-image: none;float: right"/>
         </center>              
     </h:body>
 </html>
